# email_classification

./: .pre-commit-config.yaml  README.md  email_dataset.csv  notebook.ipynb  pyproject.toml
enron1/ham/: 0002.1999-12-13.farmer.ham.txt  0003.1999-12-14.farmer.ham.txt  0004.1999-12-14.farmer.ham.txt  0005.1999-12-14.farmer.ham.txt  0007.1999-12-14.farmer.ham.txt  0009.1999-12-14.farmer.ham.txt  0010.1999-12-14.farmer.ham.txt  0011.1999-12-14.farmer.ham.txt  0012.1999-12-14.farmer.ham.txt  0013.1999-12-14.farmer.ham.txt  0014.1999-12-15.farmer.ham.txt  0015.1999-12-15.farmer.ham.txt  0016.1999-12-15.farmer.ham.txt  0019.1999-12-15.farmer.ham.txt  0020.1999-12-15.farmer.ham.txt  0021.1999-12-15.farmer.ham.txt  0022.1999-12-16.farmer.ham.txt  0023.1999-12-16.farmer.ham.txt  0024.1999-12-16.farmer.ham.txt  0025.1999-12-16.farmer.ham.txt  0027.1999-12-17.farmer.ham.txt  0028.1999-12-17.farmer.ham.txt  0029.1999-12-17.farmer.ham.txt  0030.1999-12-20.farmer.ham.txt  0031.1999-12-20.farmer.ham.txt  0033.1999-12-20.farmer.ham.txt  0034.1999-12-20.farmer.ham.txt  0035.1999-12-20.farmer.ham.txt  0036.1999-12-20.farmer.ham.txt  0037.1999-12-20.farmer.ham.txt  0038.1999-12-20.farmer.ham.txt  0039.1999-12-21.farmer.ham.txt  0042.1999-12-21.farmer.ham.txt  0043.1999-12-21.farmer.ham.txt  0044.1999-12-21.farmer.ham.txt  0045.1999-12-21.farmer.ham.txt  0047.1999-12-21.farmer.ham.txt  0048.1999-12-21.farmer.ham.txt  0049.1999-12-21.farmer.ham.txt  0050.1999-12-22.farmer.ham.txt  (+3414 more)
enron1/spam/: 0008.2003-12-18.GP.spam.txt  0017.2003-12-18.GP.spam.txt  0026.2003-12-18.GP.spam.txt  (+321 more)
