[tool.poetry]
name = "email_classification"
version = "0.1.0"
description = ""
authors = ["Luiky"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.4.8"
pandas = "^1.4.1"
loguru = "^0.6.0"
Unidecode = "^1.3.3"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
